--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+`<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
@@ -23,5 +23,5 @@
     </section>
     
   </body>
-  <script src="renderer.js"></script>
+  <script src="renderer.js" defer></script>
 </html>
